# ufc_fantasy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  frontend.yml  integration.yml
artifacts/: README.md  basic-table-artifact.md  chatui-artifact.md
backend/: .dockerignore  .editorconfig  .env.ci  .env.example  .env.production.example  .gitignore  Procfile  README.md  deploy.md  gunicorn.conf.py  pyproject.toml
backend/ansible/: README.md  ansible_env.yml.example  site.yml
backend/ansible/group_vars/: all.yml
backend/ansible/inventory/: hosts
backend/ansible/roles/dokku_application/tasks/: main.yml
backend/ansible/roles/dokku_base/tasks/: main.yml
backend/ansible/roles/dokku_database/tasks/: main.yml
backend/ansible/roles/dokku_environment/tasks/: main.yml
backend/ansible/roles/dokku_network/tasks/: main.yml
backend/ansible/roles/dokku_redis/tasks/: main.yml
backend/docker/: Dockerfile  entrypoint.sh
backend/fantasy/: apps.py
backend/project/: __init__.py  apps.py  asgi.py  celery.py  conftest.py  settings.py  urls.py
backend/project/accounts/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/project/accounts/migrations/: 0001_initial.py
backend/project/accounts/templates/account/email/: email_confirmation_message.txt
backend/project/accounts/tests/: test_admin_auth.py  test_auth_apis.py  test_forms.py  test_models.py  test_views.py
backend/project/core/: admin.py  apps.py  fields.py  middleware.py  models.py  permissions.py  views.py  xframe.py
backend/project/core/docs/: schemas.py  tests.py  urls.py  utils.py
backend/project/core/management/commands/: setup_dev_env.py
backend/project/core/templates/admin/: base_site.html
backend/project/core/templates/drf_spectacular/: redoc.html
backend/project/core/tests/: test_fields.py  test_views.py
backend/project/core/tests/test_utils/: test_datetime.py
backend/project/core/utils/: datetime.py  frontend.py  html.py
backend/project/ufc/: apps.py  models.py
backend/terraform/: .terraform.lock.hcl  README.md  bucket.tf  firewall.tf  main.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: README.md
docs/engineering-handbook/: .gitignore  CLAUDE.md  README.md  file_structure.md
docs/engineering-handbook/agent-guidance/: core-system.md
docs/engineering-handbook/agent-guidance/tech-context/: django-behavior.md  sveltekit-behavior.md
docs/engineering-handbook/scripts/: README.md  copy-all.py  list-workflows.py
frontend/: .dockerignore  .env.example  README.md  eslint.config.js  package-lock.json  package.json  sync-artifacts.sh  tailwind.config.js  vite.config.ts
frontend/docker/: Dockerfile
frontend/src/: app.html  hooks.client.ts  hooks.server.ts
frontend/src/routes/: +error.svelte  +layout.svelte
frontend/static/artifacts/: README.md  basic-table-artifact.md  chatui-artifact.md
(+70 files in other folders)
